Bug 399984 - "Align Left" and "Align Right" buttons swapped ("Arrange" docker)
Summary: "Align Left" and "Align Right" buttons swapped ("Arrange" docker)
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Vector (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-18 13:21 UTC by mvowada
Modified: 2018-11-20 08:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mvowada 2018-10-18 13:21:26 UTC
(4.2.0-pre-alpha (git a2ae7f3) - Ubuntu)

The align right/left buttons in the "Arrange" docker are swapped:

    1. select a shape
    2. click the "Align Right" button

Actual Results: Align Left
Expected: Align Right
Comment 1 Anna Medonosova 2018-11-16 14:33:44 UTC
Git commit cdc608d37ade87ed6ce45119d9352af9c8bab4ce by Anna Medonosova.
Committed on 16/11/2018 at 14:33.
Pushed by amedonosova into branch 'master'.

Arrange docker: UI polish

Summary:
  * New, more legible layout.
  * The arrange controls work only with the Select Shapes Tool. If another tool is active, the docker displays a message
    instead of the buttons. (Fixes bug 394084.)
  * Also fixes mismatched align icons (bug 399984).
Related: bug 394084

Reviewers: #krita, rempt

Reviewed By: #krita, rempt

Subscribers: rempt

Tags: #krita

Differential Revision: https://phabricator.kde.org/D16902

M  +27   -22   krita/pics/misc-dark/dark_ox16-action-object-align-horizontal-left-calligra.svg
M  +22   -27   krita/pics/misc-dark/dark_ox16-action-object-align-horizontal-right-calligra.svg
M  +2    -2    krita/pics/misc-dark/misc-dark-icons.qrc
M  +26   -22   krita/pics/misc-light/light_ox16-action-object-align-horizontal-left-calligra.svg
M  +22   -26   krita/pics/misc-light/light_ox16-action-object-align-horizontal-right-calligra.svg
M  +2    -2    krita/pics/misc-light/misc-light-icons.qrc
M  +11   -0    plugins/dockers/arrangedocker/arrange_docker_widget.cpp
M  +1    -0    plugins/dockers/arrangedocker/arrange_docker_widget.h
M  +502  -272  plugins/dockers/arrangedocker/arrange_docker_widget.ui
M  +9    -1    plugins/dockers/arrangedocker/arrangedocker_dock.cpp
M  +1    -0    plugins/dockers/arrangedocker/arrangedocker_dock.h

https://commits.kde.org/krita/cdc608d37ade87ed6ce45119d9352af9c8bab4ce
Comment 2 Halla Rempt 2018-11-20 08:57:27 UTC
Git commit 2883c08abef9df98975b9a38e480528747d434ec by Boudewijn Rempt, on behalf of Anna Medonosova.
Committed on 20/11/2018 at 08:25.
Pushed by rempt into branch 'krita/4.1'.

Arrange docker: UI polish

Summary:
  * New, more legible layout.
  * The arrange controls work only with the Select Shapes Tool. If another tool is active, the docker displays a message
    instead of the buttons. (Fixes bug 394084.)
  * Also fixes mismatched align icons (bug 399984).
Related: bug 394084

Reviewers: #krita, rempt

Reviewed By: #krita, rempt

Subscribers: rempt

Tags: #krita

Differential Revision: https://phabricator.kde.org/D16902

M  +27   -22   krita/pics/misc-dark/dark_ox16-action-object-align-horizontal-left-calligra.svg
M  +22   -27   krita/pics/misc-dark/dark_ox16-action-object-align-horizontal-right-calligra.svg
M  +2    -2    krita/pics/misc-dark/misc-dark-icons.qrc
M  +26   -22   krita/pics/misc-light/light_ox16-action-object-align-horizontal-left-calligra.svg
M  +22   -26   krita/pics/misc-light/light_ox16-action-object-align-horizontal-right-calligra.svg
M  +2    -2    krita/pics/misc-light/misc-light-icons.qrc
M  +11   -0    plugins/dockers/arrangedocker/arrange_docker_widget.cpp
M  +1    -0    plugins/dockers/arrangedocker/arrange_docker_widget.h
M  +502  -272  plugins/dockers/arrangedocker/arrange_docker_widget.ui
M  +9    -1    plugins/dockers/arrangedocker/arrangedocker_dock.cpp
M  +1    -0    plugins/dockers/arrangedocker/arrangedocker_dock.h

https://commits.kde.org/krita/2883c08abef9df98975b9a38e480528747d434ec