Arrange docker: UI polish

Summary:
  * New, more legible layout.
  * The arrange controls work only with the Select Shapes Tool. If another tool is active, the docker displays a message
    instead of the buttons. (Fixes bug 394084.)
  * Also fixes mismatched align icons (bug 399984).

BUG: 399984
BUG: 394084

Reviewers: #krita, rempt

Reviewed By: #krita, rempt

Subscribers: rempt

Tags: #krita

Differential Revision: https://phabricator.kde.org/D16902